# space4ai-r-optimizer

./: Dockerfile  README.md  estimate_CPUs.py  maximum_workload.py  python_requirements.txt  s4ai-r-opt.py
example_applications/: README.md  call_max_workload_api.py  run_s4air_vs_bcpc.py  test_webapi.py
k8s/: config.properties  kustomization.yaml  max-load-api-deployment.yaml  max-load-api-service.yaml  s4air-optimizer-pod.yaml  test-max-load-api-pod.yaml
pacsltk_webapp/: Dockerfile  app.py  requirements.txt
pacsltk_webapp/k8s/: config.properties  kustomization.yaml  pacsltk-deployment.yaml  pacsltk-service.yaml
s4ai-r-optimizer/apps/: CMakeLists.txt  main_check_feasibility.cpp  main_s4air.cpp
s4ai-r-optimizer/config/: config_rt_solver.json
s4ai-r-optimizer/src/: CMakeLists.txt  Logger.hpp  TypeTraits.hpp
s4ai-r-optimizer/src/Algorithms/: LocalSearchManager.hpp  RandomGreedy.hpp
s4ai-r-optimizer/src/Performance/: PerformanceFactory.hpp  PerformanceModels.cpp  PerformanceModels.hpp  PerformancePredictors.cpp  PerformancePredictors.hpp  SystemPE.cpp  SystemPE.hpp
s4ai-r-optimizer/src/Solution/: EliteResult.cpp  Solution.cpp  Solution.hpp
s4ai-r-optimizer/src/System/: System.cpp  System.hpp  SystemData.cpp  SystemData.hpp
s4ai-r-optimizer/tests/: CMakeLists.txt  main_test_maskdetection.cpp
utilities/: Dockerfile  README.md  generate_scenario.py  generate_scenarios.py  plot_results.py  python_requirements.txt
utilities/compare_with_bcpc/: add_model.py  compare_multiple_runs.py  load_bcpc_results.py  load_results.py
(+4 files in other folders)
